<resources>
    <string name="app_name">Chatting</string>
    <string name="empty" />
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_to_register">Back to register</string>
    <string name="login">Login</string>
    <string name="toast_email_or_password_empty">Please enter text in email and password</string>
    <string name="toast_email_or_password_invalid">Your email or password is invalid</string>
    <string name="messenger">Messenger</string>
    <string name="enter_message">Enter Message…</string>
    <string name="new_message">New Messenger</string>

    <!-- Google Ads ID -->
    <string name="Admob_app_ad_ad">ca-app-pub-3578970740605859~1656082665</string>
    <string name="Admob_native_ad_id">ca-app-pub-3578970740605859/1014753135</string>
</resources>