<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_editText_register"
            style="@style/EditTextStyle_register"
            android:layout_marginTop="@dimen/common_size_24dp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_editText_register"
            style="@style/EditTextStyle_register"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/edtEmailLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_size_48dp"
            android:background="@drawable/ripple_effect"
            android:layout_marginHorizontal="@dimen/common_size_24dp"
            android:layout_marginTop="@dimen/common_size_24dp"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/login"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/backToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/common_size_32dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/common_size_4dp"
            android:textColor="#026600"
            android:textSize="@dimen/text_size_16sp"
            android:text="@string/back_to_register"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>